Fix logspam from OpenVR

BUG=848472

Change-Id: Ia86443388ca37eee342925fedd643d6f90387175
Reviewed-on: https://chromium-review.googlesource.com/1081077
Reviewed-by: Will Harris <wfh@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563439}