third_party/openvr/src/src/vrcommon/vrpathregistry_public.cpp
@@ -24,12 +24,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <algorithm>
 
 #ifndef VRLog
-	#if defined( WIN32 )
-		#define VRLog(fmt, ...)		fprintf(stderr, fmt, __VA_ARGS__)
-	#else
-		#define VRLog(args...)		fprintf(stderr, args)
-	#endif
+	#undef VRLog
 #endif
+
+#define VRLog(...)
 
 /** Returns the root of the directory the system wants us to store user config data in */
 static std::string GetAppSettingsPath()
